--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
-        "postinstall": "npm install && npx browsers install chrome && npx rebrowser-patches@latest patch --packageName puppeteer-core",
+        "postinstall": "npx browsers install chrome && npx rebrowser-patches@latest patch --packageName puppeteer-core",
+	"build": "npm install",
         "start": "export NODE_NO_WARNINGS=1 && node src/app.js",
         "dev": "export NODE_NO_WARNINGS=1 && nodemon src/app.js"
     },
