--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
     "scripts": {
-        "postinstall": "npx browsers install chrome && npx rebrowser-patches@latest patch --packageName puppeteer-core",
-	"build": "npm install --production",
+	"build": "npm install --production && npx browsers install chrome && npx rebrowser-patches@latest patch --packageName puppeteer-core",
         "start": "export NODE_NO_WARNINGS=1 && node src/app.js",
         "dev": "export NODE_NO_WARNINGS=1 && nodemon src/app.js"
     },
