--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "scripts": {
-	"build": "npm install --production && npx rebrowser-patches@latest patch --packageName puppeteer-core",
+        "build": "npm install --production && npx rebrowser-patches@latest patch --packageName puppeteer-core",
         "start": "export NODE_NO_WARNINGS=1 && node src/app.js",
         "dev": "export NODE_NO_WARNINGS=1 && nodemon src/app.js"
     },
@@ -15,6 +15,7 @@
         "fs-extra": "^11.2.0",
         "instagram-private-api": "^1.46.1",
         "mongoose": "^8.9.5",
+        "node-cron": "^3.0.3",
         "node-mailer": "^0.1.1",
         "puppeteer-extra": "^3.3.6",
         "puppeteer-extra-plugin-stealth": "^2.11.2",
